--- a/Zirpl.AppEngine.Silverlight5/Zirpl.AppEngine.Silverlight5.csproj
+++ b/Zirpl.AppEngine.Silverlight5/Zirpl.AppEngine.Silverlight5.csproj
@@ -36,6 +36,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>Bin\Debug\Zirpl.AppEngine.Silverlight.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
