--- a/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
+++ b/Zirpl.Common.Silverlight5/Zirpl.Common.Silverlight5.csproj
@@ -34,6 +34,7 @@
     <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>Bin\Debug\Zirpl.Common.Silverlight.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
