moving files from AppEngine to Common

--- a/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
+++ b/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
@@ -32,7 +32,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -111,6 +113,9 @@
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Model\BatchProcessing\IBatchItemError.cs">
       <Link>AppEngine\Model\BatchProcessing\IBatchItemError.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Model\EntityBase.cs">
+      <Link>AppEngine\Model\EntityBase.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Model\Extensibility\CustomFieldDefinitionBase.cs">
       <Link>AppEngine\Model\Extensibility\CustomFieldDefinitionBase.cs</Link>
@@ -316,6 +321,9 @@
     <Compile Include="..\Zirpl.Common\AppEngine\Service\ISupportsUpdateList.cs">
       <Link>AppEngine\Service\ISupportsUpdateList.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\ITransactionalUnitOfWorkFactory.cs">
+      <Link>AppEngine\Service\ITransactionalUnitOfWorkFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\IUnitOfWork.cs">
       <Link>AppEngine\Service\IUnitOfWork.cs</Link>
     </Compile>
@@ -339,6 +347,12 @@
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\ServiceAction.cs">
       <Link>AppEngine\Service\ServiceAction.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\TransactionalAbstractedSupportsImplService.cs">
+      <Link>AppEngine\Service\TransactionalAbstractedSupportsImplService.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\TransactionalUnitOfWorkFactoryBase.cs">
+      <Link>AppEngine\Service\TransactionalUnitOfWorkFactoryBase.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\UnitOfWorkFactoryBase.cs">
       <Link>AppEngine\Service\UnitOfWorkFactoryBase.cs</Link>
