--- a/Zirpl.Common.Portable/Zirpl.Common.Portable.csproj
+++ b/Zirpl.Common.Portable/Zirpl.Common.Portable.csproj
@@ -113,6 +113,9 @@
     <Compile Include="..\Zirpl.Common\AppEngine\Model\BatchProcessing\IBatchItemError.cs">
       <Link>AppEngine\Model\BatchProcessing\IBatchItemError.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Model\EntityBase.cs">
+      <Link>AppEngine\Model\EntityBase.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Model\Extensibility\CustomFieldDefinitionBase.cs">
       <Link>AppEngine\Model\Extensibility\CustomFieldDefinitionBase.cs</Link>
     </Compile>
@@ -317,6 +320,9 @@
     <Compile Include="..\Zirpl.Common\AppEngine\Service\ISupportsUpdateList.cs">
       <Link>AppEngine\Service\ISupportsUpdateList.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\ITransactionalUnitOfWorkFactory.cs">
+      <Link>AppEngine\Service\ITransactionalUnitOfWorkFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\IUnitOfWork.cs">
       <Link>AppEngine\Service\IUnitOfWork.cs</Link>
     </Compile>
@@ -340,6 +346,12 @@
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\ServiceAction.cs">
       <Link>AppEngine\Service\ServiceAction.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\TransactionalAbstractedSupportsImplService.cs">
+      <Link>AppEngine\Service\TransactionalAbstractedSupportsImplService.cs</Link>
+    </Compile>
+    <Compile Include="..\Zirpl.Common\AppEngine\Service\TransactionalUnitOfWorkFactoryBase.cs">
+      <Link>AppEngine\Service\TransactionalUnitOfWorkFactoryBase.cs</Link>
     </Compile>
     <Compile Include="..\Zirpl.Common\AppEngine\Service\UnitOfWorkFactoryBase.cs">
       <Link>AppEngine\Service\UnitOfWorkFactoryBase.cs</Link>
