removed IEnumerable interface so Execute needs to be called. This will make it easier to get one result through ExecuteSingle and also makes it more clear that no actual reflection is done until Execute is called.

--- a/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
+++ b/Zirpl.Common.Net45/Zirpl.Common.Net45.csproj
@@ -561,6 +561,9 @@
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberQueryBase.cs">
       <Link>Reflection\Fluent\_interfaces\IMemberQueryBase.cs</Link>
     </Compile>
+    <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberQueryResult.cs">
+      <Link>Reflection\Fluent\_interfaces\IMemberQueryResult.cs</Link>
+    </Compile>
     <Compile Include="..\Zirpl.Common\Reflection\Fluent\_interfaces\IMemberScopeQuery.cs">
       <Link>Reflection\Fluent\_interfaces\IMemberScopeQuery.cs</Link>
     </Compile>
